
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int itoa64_to_int (int const) ;

__attribute__((used)) static void sha1aix_decode (u8 digest[20], const u8 buf[27])
{
  int l;

  l = itoa64_to_int (buf[ 0]) << 0;
  l |= itoa64_to_int (buf[ 1]) << 6;
  l |= itoa64_to_int (buf[ 2]) << 12;
  l |= itoa64_to_int (buf[ 3]) << 18;

  digest[ 2] = (l >> 0) & 0xff;
  digest[ 1] = (l >> 8) & 0xff;
  digest[ 0] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[ 4]) << 0;
  l |= itoa64_to_int (buf[ 5]) << 6;
  l |= itoa64_to_int (buf[ 6]) << 12;
  l |= itoa64_to_int (buf[ 7]) << 18;

  digest[ 5] = (l >> 0) & 0xff;
  digest[ 4] = (l >> 8) & 0xff;
  digest[ 3] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[ 8]) << 0;
  l |= itoa64_to_int (buf[ 9]) << 6;
  l |= itoa64_to_int (buf[10]) << 12;
  l |= itoa64_to_int (buf[11]) << 18;

  digest[ 8] = (l >> 0) & 0xff;
  digest[ 7] = (l >> 8) & 0xff;
  digest[ 6] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[12]) << 0;
  l |= itoa64_to_int (buf[13]) << 6;
  l |= itoa64_to_int (buf[14]) << 12;
  l |= itoa64_to_int (buf[15]) << 18;

  digest[11] = (l >> 0) & 0xff;
  digest[10] = (l >> 8) & 0xff;
  digest[ 9] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[16]) << 0;
  l |= itoa64_to_int (buf[17]) << 6;
  l |= itoa64_to_int (buf[18]) << 12;
  l |= itoa64_to_int (buf[19]) << 18;

  digest[14] = (l >> 0) & 0xff;
  digest[13] = (l >> 8) & 0xff;
  digest[12] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[20]) << 0;
  l |= itoa64_to_int (buf[21]) << 6;
  l |= itoa64_to_int (buf[22]) << 12;
  l |= itoa64_to_int (buf[23]) << 18;

  digest[17] = (l >> 0) & 0xff;
  digest[16] = (l >> 8) & 0xff;
  digest[15] = (l >> 16) & 0xff;

  l = itoa64_to_int (buf[24]) << 0;
  l |= itoa64_to_int (buf[25]) << 6;
  l |= itoa64_to_int (buf[26]) << 12;

  digest[19] = (l >> 8) & 0xff;
  digest[18] = (l >> 16) & 0xff;
}
